--- a/settings.json
+++ b/settings.json
@@ -8,7 +8,7 @@
     "server":{
         "ip": "127.0.0.1",
         "port": 25565,
-        "version": "1.18.1"
+        "version": "1.17.1"
     },
 
     "position":{
@@ -44,7 +44,9 @@
 
         "chat-log": true,
         "auto-reconnect": true,
-        "delay": 120
+        "delay": 120, //reconnect when bot disconnect
+
+        "timeout": 7200 //for disconnect bot because idk way to clear ram of nodejs while it run
         
     }
 }
